@@ -46,6 +46,10 @@ repository = git://github.com/kentfredric/Data-Couplet.git
 [Prereq]
 Test::More = 0
 Moose = 0.84
+MooseX::Clone = 0.04
+MooseX::Has::Sugar = 0.0404 ; < 0.0300 is bad
+MooseX::Types = 0.19 ; 0.18 is bad , and ::Moose has no version! :(
+MooseX::Types::Moose = 0.19 ; 0.18 is bad
 namespace::autoclean = 0
 Test::use::ok = 0
 Carp = 0
