@@ -1,0 +1,5 @@
+use strict;
+use warnings;
+
+use Test::Perl::Critic( -profile => 'perlcriticrc' );
+all_critic_ok();
